--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,15 @@
 h1 {
     color: navy;
 }
+
+.content {
+    background-color: red;
+}
+
+.movieCard {
+    background-color: rgb(86, 168, 90);
+}
+
+.movieInfo {
+    background-color: rgb(82, 0, 75);
+}
