add map over MovieCard generation

--- a/src/components/Content/content.scss
+++ b/src/components/Content/content.scss
@@ -29,8 +29,8 @@
     &__releaseDate {
         border: 1px solid;
         border-radius: 5px;
-        width: 80px;
         height: 20px;
+        text-align: center;
     }
 
     &__infoContainer {
