--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -156,6 +156,7 @@
     border: none;
     border-bottom: 2px solid red;
     line-height: 40px;
+    color: #fff;
 
     &:focus {
         outline: none !important;
