--- a/src/components/Content/content.scss
+++ b/src/components/Content/content.scss
@@ -1,4 +1,5 @@
 .content {
+    margin-top: 16px;
     &Container {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
@@ -17,6 +18,8 @@
     }
 
     &__posterContainer {
+        display: flex;
+        justify-content: center;
     }
 
     &__poster {
