--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -2,7 +2,6 @@
     background-color: rgb(49, 49, 49);
     padding-top: 20px;
     font-family: Arial, Helvetica, sans-serif;
-    margin-bottom: 16px;
 
     &__logoContainer {
         margin-bottom: 50px;
@@ -11,6 +10,7 @@
     &__searchFormContainer {
         padding-left: 100px;
         padding-right: 100px;
+        background-color: #313131;
     }
     &__searchResultsContainer {
         background-color: rgb(197, 197, 197);
@@ -58,7 +58,8 @@
     }
 
     &__movieDetailsContainer {
-        grid-column: 1/3;
+        // grid-column: 1/3;
+        background-color: #313131;
     }
 
     &__movieDetails {
